fix: align springdoc with spring boot and stabilize global exception handling

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,10 @@ spring:
         format_sql: true
         jdbc:
           time_zone: UTC
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
