--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,12 @@ spring:
         format_sql: true
         jdbc:
           time_zone: UTC
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: guest
+    password: guest
+
 springdoc:
   api-docs:
     path: /v3/api-docs
